# CPP20_Ranges

./: .gitignore  CMakeLists.txt  README.md
CMake/: includeRange.cmake
JeffGCPPNow2019/: 04_takeView.cpp  05_flatMapReverse.cpp  06_filterViewEvens.cpp  10_countIsSorted.cpp  14_minmaxElement.cpp  15_copyIf.cpp  21_iotaOverview.cpp  22_iotaTake.cpp  23_stringJoin.cpp  26_splitView.cpp  29_transformView.cpp  CMakeLists.txt  ReadMe.md
en_manual/: CMakeLists.txt  README.md  adaptorUnary.cpp  anyAllNoneOf.cpp  count.cpp  countIf.cpp  findFindIfFindIfNot.cpp  forEach.cpp  forEachAssoc.cpp  hello.cpp  mutatingContainerData.cpp  predicate_remove.cpp  printUtil.hpp  rangeComprehension.cpp  rangeNamespace.hpp  squareSum10.cpp
examples/: 01_sort.cpp  02_findIf.cpp  03_filterView.cpp  07_for_each_drop_while.cpp  08_projection_sort.cpp  09_string.cpp  11_findIif.cpp  12_sort.cpp  13_minmax.cpp  16_shifts.cpp  17_filterTransform.cpp  18_filterTransformTrace.cpp  20_spanReverse.cpp  22_iotaTake.cpp  23_stringJoin.cpp  24_emptyVew.cpp  25_singleView.cpp  27_reverseView.cpp  28_reverseViewString.cpp  29_transformView.cpp  30_dropWhile.cpp  CMakeLists.txt
include/: printUtil.hpp  ranges
try/: CMakeLists.txt
